--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,7 +1,9 @@
+/* Common Styles */
 body {
   margin: 0px;
   font-family: "Lato", sans-serif;
 }
+/* Header Styles */
 .header {
   background: rgba(229, 84, 115, 0.1);
   display: flex;
@@ -38,4 +40,57 @@ body {
   width: 400px;
   height: 800px;
   padding-top: 50px;
+}
+/* main styles */
+main {
+  margin-top: 178px;
+  margin-left: 180px;
+  margin-right: 180px;
+}
+.feature-title {
+  color: rgb(39, 39, 39);
+  font-size: 40px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 24px;
+  margin-top: 0px;
+}
+.feature-description {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 48px;
+  margin-top: 0px;
+}
+.feature-img {
+  display: flex;
+  gap: 10px;
+  /* justify-content: space-between; */
+}
+.fimg1 {
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+  padding: 110px 78px 0px 78px;
+  margin-bottom: 0px;
+}
+.fimg2 {
+  border-radius: 300px 300px 0px 0px;
+  background: #0597a026;
+  padding: 117px 47px 51px 47px;
+  margin-bottom: 0px;
+}
+.fimg3 {
+  border-radius: 300px 300px 0px 0px;
+  background: #477d1126;
+  padding: 67px 75px 0px 75px;
+  margin-bottom: 0px;
+}
+.img-title {
+  color: rgb(39, 39, 39);
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+  text-decoration-line: underline;
+  margin-top: 32px;
 }
