--- a/styles/flower.css
+++ b/styles/flower.css
@@ -44,6 +44,8 @@ body {
 /* main styles */
 main {
   margin-top: 178px;
+}
+.feature {
   margin-left: 180px;
   margin-right: 180px;
 }
@@ -102,13 +104,51 @@ main {
   background: #2727270d;
   padding: 87px 175px;
   margin-bottom: 128px;
+  border-radius: 8px;
+  margin-left: 180px;
+  margin-right: 180px;
 }
 .icon-img {
-    padding: 2px 142px 0px 142px;
+  padding: 2px 142px 0px 142px;
 }
 .icon-title {
   color: rgba(39, 39, 39, 0.8);
   font-size: 24px;
   font-weight: 600;
   text-align: center;
+}
+.deal {
+  display: flex;
+  gap: 100px;
+  /* justify-content: space-between; */
+  border-radius: 8px;
+  background: rgba(229, 84, 115, 0.05);
+  margin-bottom: 128px;
+}
+.deal-content{
+  padding:230px 0px 162px 250px;
+}
+.deal-title {
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
+  margin-bottom: 0px;
+}
+.deal-description {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  /* text-align: center; */
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
+.deal-text {
+  color: #e55473;
+}
+.deal-img {
+  padding: 100px 200px 100px 0px;
+}
+.insta{
+  margin-top: 0px;
+  margin-bottom: 128px;
 }
